--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "vue-hello-worl-simple",
+  "name": "vue-hello-world-simple-xyz",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build-library": "vue-cli-service build --target lib --name vue-hello-world-simple ./src/install.js",
+    "lint": "vue-cli-service lint",
+    "main": "dist/vue-hello-world-simple.common.js",
+    "files": [
+      "dist/*"
+    ]
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-hello-world-simple-xyz": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
